kubernetes/pycount-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pycount-frontend-svc
  namespace: pycount
  labels:
    service: pycount-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: pycount-frontend
