kubernetes/pycount-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pycount-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pycount-frontend-deploy
  namespace: pycount-frontend
  labels:
    app: pycount-frontend
spec:
  selector:
    matchLabels:
      app: pycount-frontend
  template:
    metadata:
      labels:
        app: pycount-frontend
    spec:
      containers:
        - name: pycount-frontend
          image: duratm/pycount-frontend:dev
          imagePullPolicy: "Always"
          ports:
            - name: frontend
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pycount-frontend-svc
  namespace: pycount-frontend
  labels:
    service: pycount-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: pycount-frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pycount-frontend-ingress
  namespace: pycount-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pycount-frontend-svc
                port:
                  number: 80
